Pushing a z-index fix for the nav

--- a/src/pages/Layout.scss
+++ b/src/pages/Layout.scss
@@ -16,7 +16,7 @@
 		padding: 0;
 		position: relative;
 		margin-right: -12px;
-		z-index: 2;
+		z-index: 3;
 
 		.icon {
 			position: absolute;
@@ -48,7 +48,7 @@
 		top: 0;
 		right: -100%;
 		height: 100%;
-		z-index: 1;
+		z-index: 2;
 		width: 67%;
 		padding-top: 118px;
 		list-style: none;
